--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fps-stats": "^0.3.1",
+    "stats.js": "^0.17.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "uuid": "^9.0.0",
