--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.0.0",
     "@pixi/react": "^7.1.0",
+    "@tweenjs/tween.js": "^20.0.3",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
