--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "async-busboy": "^1.1.0",
     "autoprefixer": "10.4.14",
     "busboy": "^1.6.0",
+    "cookies-next": "^4.0.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "googleapis": "^126.0.1",
     "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "next": "13.4.2",
     "next-connect": "^1.0.0",
+    "openai": "^4.8.0",
     "pixi.js": "^7.2.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
