--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "node --loader tsx --test tests/unit/get-json-from-gpt-answer.test.ts"
   },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
@@ -48,6 +49,7 @@
     "@types/multer": "^1.4.7",
     "@types/uuid": "^9.0.1",
     "concurrently": "^8.0.1",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "tsx": "^3.13.0"
   }
 }
