--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "eslint-config-next": "13.4.2",
     "googleapis": "^126.0.1",
     "mime-types": "^2.1.35",
+    "mobx": "^6.10.2",
+    "mobx-react-lite": "^4.0.5",
     "multer": "^1.4.5-lts.1",
     "next": "13.4.2",
     "next-connect": "^1.0.0",
