--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "styled-components": "^6.0.0-rc.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
+    "undici": "^5.25.4",
     "uuid": "^9.0.0",
     "videoshow": "^0.1.12"
   },
