--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "13.4.2",
     "next-connect": "^1.0.0",
+    "node-lame": "^1.3.2",
     "openai": "^4.8.0",
     "pixi.js": "^7.2.4",
     "postcss": "8.4.23",
