--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fps-stats": "^0.3.1",
+    "short-uuid": "^4.2.2",
     "stats.js": "^0.17.0",
     "styled-components": "^6.0.0-rc.3",
     "tailwindcss": "3.3.2",
