--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "cookies-next": "^4.0.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "fluent-ffmpeg": "^2.1.2",
+    "get-mp3-duration": "^1.0.0",
     "googleapis": "^126.0.1",
     "mime-types": "^2.1.35",
     "mobx": "^6.10.2",
@@ -45,8 +47,7 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "undici": "^5.25.4",
-    "uuid": "^9.0.0",
-    "videoshow": "^0.1.12"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/async-busboy": "^1.1.1",
